array.island.Island.scala.error
Erreur de compilation :
Island:6: error: '(' expected but identifier found.
    if num(x)<num(x+1){nb=nb+1}
       ^Island:7: error: illegal start of simple expression
  }
  ^